--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
     "@next/font": "13.1.1",
+    "@vercel/analytics": "^0.1.11",
     "framer-motion": "^8.5.0",
     "intersection-observer": "^0.12.2",
     "jquery": "^3.6.4",
     "next": "13.1.1",
+    "next-seo": "^6.0.0",
     "next-share": "^0.20.0",
     "pure-react-carousel": "^1.30.1",
     "react": "18.2.0",
