--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.5",
     "@hookform/resolvers": "^2.9.11",
     "@next/font": "13.1.1",
     "@vercel/analytics": "^0.1.11",
@@ -18,6 +19,7 @@
     "next": "13.1.1",
     "next-seo": "^6.0.0",
     "next-share": "^0.20.0",
+    "nodemailer": "^6.9.1",
     "pure-react-carousel": "^1.30.1",
     "react": "18.2.0",
     "react-creative-cursor": "^1.2.7",
