--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.8.0",
     "smooth-scrollbar": "^8.8.1",
+    "split-type": "^0.3.3",
     "styled-components": "^5.3.9",
     "swiper": "^8.4.7",
     "ukiyojs": "^4.0.0",
