--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^2.9.11",
     "@next/font": "13.1.1",
     "@vercel/analytics": "^0.1.11",
+    "disqus-react": "^1.1.5",
     "framer-motion": "^8.5.0",
     "intersection-observer": "^0.12.2",
     "jquery": "^3.6.4",
@@ -30,7 +31,6 @@
     "split-type": "^0.3.3",
     "styled-components": "^5.3.9",
     "swiper": "^8.4.7",
-    "ukiyojs": "^4.0.0",
     "yup": "^1.0.0"
   }
 }
