--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gsap": "^3.11.5",
     "intersection-observer": "^0.12.2",
     "jquery": "^3.6.4",
+    "locomotive-scroll": "^5.0.0-beta.8",
     "next": "13.1.1",
     "next-seo": "^6.0.0",
     "next-share": "^0.20.0",
