--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.0",
     "@studio-freight/lenis": "^1.0.27",
     "@vercel/analytics": "^1.0.2",
+    "@vercel/speed-insights": "^1.0.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "blob": "^0.1.0",
@@ -26,6 +27,7 @@
     "fs": "^0.0.1-security",
     "fs-extra": "^11.1.1",
     "gsap": "^3.12.2",
+    "howler": "^2.2.4",
     "intersection-observer": "^0.12.2",
     "jquery": "^3.7.0",
     "libphonenumber-js": "^1.10.44",
