--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "z1",
+  "name": "enigma-digital",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://weareenigma.com/",
