--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "enigma-digital",
+  "name": "z1",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://weareenigma.com/",
@@ -24,7 +24,7 @@
     "critters": "^0.0.20",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
-    "formidable": "^1.2.6",
+    "formidable": "^2.0.1",
     "framer-motion": "^10.16.1",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.1.1",
@@ -38,15 +38,16 @@
     "next-seo": "^6.1.0",
     "next-share": "^0.25.0",
     "next-sitemap": "^4.2.2",
-    "nodemailer": "^6.9.5",
+    "nodemailer": "^6.7.7",
     "parameterize": "^1.0.0",
     "path": "^0.12.7",
-    "postcss": "8.4.28",
+    "postcss": "^8.4.35",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-creative-cursor": "^1.2.7",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-intersection-observer": "^9.5.2",
     "react-phone-number-input": "^3.3.6",
     "react-router-dom": "^6.20.1",
@@ -63,7 +64,7 @@
   },
   "devDependencies": {
     "@builder.io/partytown": "^0.8.1",
-    "@types/node": "^20.6.0",
+    "@types/node": "^18.19.1",
     "typescript": "5.2.2"
   }
 }
