--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "compression": "^1.7.4",
     "critters": "^0.0.20",
     "date-fns": "^2.30.0",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "formidable": "^2.0.1",
     "framer-motion": "^10.16.1",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.1.1",
+    "google-auth-library": "^9.9.0",
+    "google-spreadsheet": "^4.1.1",
     "graphql": "^16.8.1",
     "gsap": "^3.12.2",
     "intersection-observer": "^0.12.2",
