--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.8.8",
     "@chakra-ui/react": "^2.8.0",
     "@hookform/resolvers": "^3.3.4",
+    "@next/third-parties": "^14.2.15",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
