--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@artsy/fresnel": "^8.1.0",
     "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^5.1.1",
+    "@next/third-parties": "^15.3.4",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
@@ -22,6 +23,8 @@
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.95.0",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
